--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 .idea/
 **/*.log
 /packs/core-effects/
+/packs/action-combat-macros/
+/packs/action-movement-macros/
+/packs/action-other-macros/
+/packs/explore-macros/
+/packs/downtime-macros/
 module/.DS_Store
